--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.907.0",
     "express": "^4.17.1",
     "serverless-http": "^2.7.0"
   }
