--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "aws-sdk": "^2.907.0",
     "express": "^4.17.1",
     "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "serverless-dynamodb-local": "^0.2.39",
+    "serverless-offline": "^7.0.0"
   }
 }
